# llm-evaluation-system

./: .dockerignore  .env.keys.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INSTALL.md  Makefile  README.md  ROADMAP.md  THIRD_PARTY  architecture-diagram.drawio  buildspec-deploy.yml  buildspec.yml  deploy.sh  destroy.sh  manage-users.sh  package-lock.json  package.json  pyproject.toml  release-please-config.json  stress_test.py  verify_chat.py  verify_edge.py  verify_grant_isolation.py  verify_lifecycle.py  verify_migration.py  verify_reconnect.py  verify_resource_sharing.py  verify_results.py  verify_tenant_isolation.py
buildspec-scripts/: deploy.sh  destroy-data.sh  destroy.sh
design/: agent-eval-architecture.md  agentcore-architecture.md
docker/: backend.Dockerfile  frontend.Dockerfile  promptfoo-mcp.Dockerfile  providers-mcp.Dockerfile  synthetic-mcp.Dockerfile
docs/: DEVELOPMENT.md  EVAL_SHARING_DESIGN.md  PRICING.md  SELF_HOSTING.md  architecture-diagram.html  evaluation-platform-onepager.md
eval_mcp/: INSTALL.md  __init__.py  __main__.py  _agent_launcher.py  agent_detect.py  bedrock.py  bedrock_capture.py  canary.py  cli.py  config.py  otlp_receiver.py  provider_pricing.json  pyproject.toml  s3_sync.py  server.py  storage.py  subprocess_runner.py  viewer.py
eval_mcp/core/: __init__.py  bedrock_client.py  document_chunking.py  eval_results.py  judge_config.py  litellm_pricing_snapshot.json  logging_utils.py  pdf_report.py  pipeline_stages.py  pricing.py  provider_pricing.json  user_storage.py
eval_mcp/installers/: __init__.py  _json_merge.py  _toml_merge.py  base.py  claude_code.py  codex.py  cursor.py  detect.py  kiro.py  vscode.py
eval_mcp/scorers/: rag.py
eval_mcp/solvers/: static_output.py
eval_mcp/src/eval_mcp/tools/: create_config.py  run_eval.py
eval_mcp/tools/: agent.py  analyze_agent_image.py  analyze_agent_path.py  analyze_dataset.py  bedrock_models.py  benchmarks.py  create_agent_eval_config.py  create_config.py  create_pipeline_eval_config.py  external_providers.py  generate_judge.py  generate_qa.py  generate_report.py  get_evaluation_details.py  get_optimization_details.py  list_datasets.py  list_eval_configs.py  list_evaluations.py  list_judges.py  list_optimizations.py  models.py  optimize_prompt.py  run_eval.py  save_dataset.py  server_http.py
eval_mcp/viewer_static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  chat.html  chat.txt  data.html  data.txt  history.html  history.txt  index.html  index.txt  optimizations.html  optimizations.txt  results.html  results.txt
eval_mcp/viewer_static/_next/static/7GiZO91e8Mp14GdFo4vYe/: _buildManifest.js
eval_mcp/viewer_static/_next/static/UvO5ubn-j8dVphGyT6Q2I/: _buildManifest.js
eval_mcp/viewer_static/_next/static/chunks/: 0-oakvjqzm16v.js  0.5ug30f06ab5.js  0.~gq4130amdm.js  0.~hzz_6dm_al.js  004~5-orepc~t.js  00td5n_f9~pnp.js  016wysdp84log.js  02h8hzab52b~e.js  046~my5a05uwz.js  048_63ctgz5zb.js  058-28l_rfwgm.js  05ba60o5sk4c0.js  05sj14tmp.i90.js  05t-rc14_7snt.js  05uqnfts5s..w.js  069ro~gj~f4nk.js  07nud4p-isbmn.js  07w6y2skf4iqn.js  0837qq96gevn8.css  08dim.ee9lp3r.css  08enco4vkutyp.js  08ewij6s9dh7x.js  08fyqny3~~eah.js  08gmbfvin.g_4.js  09-nuvi-fyd8q.js  09.0.6tw39mzx.js  091s-5j_cwe8l.js  09i0bsh.mddv-.js  09wwp3jvir37l.js  0_f8q2w2i~z7r.js  0_i._.xrvczva.js  0_wu~wq7tu.6h.css  0an8ro8.oaloc.js  0archap_-cbwa.js  0ayvms20t3v94.js  0bbx2a-d7wuje.css  0bzd44wammcpb.js  0c-ao3dpc1m-2.js  0c9f7ke4enzvt.js  0cdjc-5i_1lmi.js  (+91 more)
eval_mcp/viewer_static/_next/static/chunks/app/: layout-b02f08831db8c044.js  layout-eaaa69189c17325d.js  not-found-839871d13c8e3545.js  page-e6485ae15d5da087.js
eval_mcp/viewer_static/_next/static/chunks/app/_not-found/: page-cd5373c361106a7f.js
eval_mcp/viewer_static/_next/static/chunks/app/chat/: page-44b7594ba1469fcc.js
eval_mcp/viewer_static/_next/static/chunks/app/history/: page-94442c60a89495e2.js
eval_mcp/viewer_static/_next/static/chunks/app/results/: page-4a1773a95b746e1c.js  page-4cc299acecefa446.js  page-6f6c5cc6cb215ed1.js  page-7d8f1c6ea2a559e1.js
eval_mcp/viewer_static/_next/static/css/: 635eece9e6209c32.css  f16ff24c5ddd9b40.css
eval_mcp/viewer_static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
eval_mcp/viewer_static/assets/: index-3H0Vbyag.css  index-DeQP9HwX.js
eval_mcp/viewer_static/chat/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.chat.__PAGE__.txt  __next.chat.txt
eval_mcp/viewer_static/data/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.data.__PAGE__.txt  __next.data.txt
eval_mcp/viewer_static/history/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.history.__PAGE__.txt  __next.history.txt
eval_mcp/viewer_static/optimizations/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.optimizations.__PAGE__.txt  __next.optimizations.txt
eval_mcp/viewer_static/results/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.results.__PAGE__.txt  __next.results.txt
examples/: run_all_tests.sh
frontend/: eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
infra/: .gitignore  .terraform.lock.hcl  terraform.tfvars.example
local/: Dockerfile.frontend  Dockerfile.python  README.md  compose.yaml  entrypoint.py  nginx-compose.conf
promptfoo/: Dockerfile  package-lock.json  package.json
scripts/: populate-pricing.py  sync-pricing.py  verify_optimizer_improves.py
tests/: check_tool_docs.py  test_agent_cancel_recovery.py  test_agent_cancellation_timing.py  test_agent_detect.py  test_bedrock_capture_adapter.py  test_bedrock_models.py  test_benchmarks.py  test_canary.py  test_chat_cancel_eks.py  test_chat_history_xpod.py  test_create_config.py  test_data_api.py  (+44 more)
(+229 files in other folders)
