[project]
name = "eval-platform"
version = "0.1.0"
description = "CLI tool for LLM evaluation and testing using Inspect AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "boto3>=1.35.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "inspect-ai>=0.3.0",
    # Model provider SDKs (optional deps of inspect-ai, needed at runtime)
    "openai>=2.26.0",
    "anthropic>=0.80.0",
    "google-genai>=1.69.0",
    "azure-identity",
    "azure-ai-inference",
    "groq>=0.28.0",
    "mistralai>=2.0.0",
    # Agent frameworks for evaluation (ARM compatible)
    "strands-agents[bedrock]>=1.22.0",
    "langgraph>=1.0.6",
    "langchain-aws>=0.2.0",
    # crewai excluded: chromadb/onnxruntime has no ARM + Python 3.12 wheels
    # Authentication handled by oauth2-proxy (no auth libs needed in backend)
]

[project.optional-dependencies]
dev = [
    "watchfiles>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
eval-chat = "backend.core.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
