[project]
name = "eval-mcp"
version = "0.1.0"
description = "MCP server for LLM evaluation using Inspect AI. Analyze code, generate datasets, run multi-judge evals."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "AWS"}]
keywords = ["llm", "evaluation", "mcp", "inspect-ai", "agents"]
dependencies = [
    "mcp>=1.0.0",
    "inspect-ai>=0.3.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.104.1",
]

[project.optional-dependencies]
openai = ["openai>=2.26.0"]
anthropic = ["anthropic>=0.80.0"]
google = ["google-genai>=1.69.0"]
all-providers = ["openai>=2.26.0", "anthropic>=0.80.0", "google-genai>=1.69.0"]
dev = ["watchfiles>=1.0.0", "pytest>=9.0.3", "ruff>=0.1.0"]

[project.scripts]
eval-mcp = "eval_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
